deployments/apps/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: apps
spec:
  selector:
    app: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: apps
spec:
  type: NodePort
  selector:
    app: gitea
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      nodePort: 30022
